--- a/css/stylel.css
+++ b/css/stylel.css
@@ -10,7 +10,7 @@
 }
 .contener{
     padding: 10px 5%;
-    margin: 50px 0;
+    margin: 0;
     align-items: center;
     justify-content: space-between;
 }
@@ -19,13 +19,21 @@ a {
     text-decoration: 0;
     font-size: 13px;
 }
-
+html {
+    font-size: 62.5%;
+    scroll-behavior: smooth;
+    scroll-padding-top: 9px;
+}
 ::-webkit-scrollbar-thumb {
     background-color: #4f4f4f;
     border-radius: 30px;
 }
 
 .navbar {
+    /* position: fixed; */
+    top: 0;
+    left: 0;
+    right: 0;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -74,17 +82,20 @@ a {
     background-color: #f2f2f2;
     border-radius: 50%;
 }
+.menu li a:active {
+    color: red;
+}
 
 .home {
     padding: 50px 5%;
-    margin: 50px 0;
-    margin-top: 1px;
+    margin: 0;
     align-items: center;
     justify-content: space-between;
     height: calc(50vh - 100px);
 }
 .home .centre {
     width: 100%;
+    height: 100%;
     text-align: center;
 }
 
@@ -132,21 +143,20 @@ a {
 
 .learn {
     padding: 0 5%;
-    margin: 50px 0;
-    margin-top: 1px;
+    margin: 0;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    height: calc(80vh - 200px);
+    height: calc(70vh - 200px);
     background-color: #EEEE;
 }
 .learn .left {
-    width: 30%;
-    height: 50%;
+    width: 100%;
+    
 }
 .learn .left  img {
-    width: 100%;
-    height: 100%;
+    width: 500px;
+    padding-left: 200px;
 }
 .learn .right h4 {
     font-weight: 500;
@@ -156,7 +166,7 @@ a {
     text-transform: capitalize;
 }
 .learn .right {
-    width: 40%;
+    width: 100%;
 }
 
 .about {
@@ -176,8 +186,7 @@ a {
 
 .home-comm {
     padding: 0 5%;
-    margin: 50px 0;
-    margin-top: 1px;
+    margin: 0;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -185,11 +194,10 @@ a {
     background-color: #EEEE;
 }
 .home-comm .left {
-    width: 55%;
+    width: 100%;
 }
 .home-comm .right {
-    width: 30%;
-    height: 50%;
+    width: 100%;
 }
 .home-comm .right  img {
     width: 100%;
@@ -334,18 +342,17 @@ section {
 .cours-abon {
     padding: 0 5%;
     margin: 0;
-    margin-top: 1px;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    height: calc(80vh - 200px);
+    height: calc(65vh - 200px);
     background-color: #EEEE;
 }
 .cours-abon .left {
-    width: 55%;
+    width: 100%;
 }
 .cours-abon .right {
-    width: 40%;
+    width: 100%;
 }
 .cours-abon .left h4 {
     font-weight: 500px;
@@ -388,6 +395,9 @@ section {
 }
 
 /*Contact CSS*/
+.contact {
+    align-items: center;
+}
 .contact h1 {
     font-size: 35px;
     color:#000;
@@ -408,6 +418,7 @@ section {
     
 }
 .form-cont  form {
+    width: 100%;
     display: flex;
     flex-direction: column;
 }
@@ -452,13 +463,16 @@ textarea {
 }
 footer {
     background-color: rgb(21, 21, 95);
-    height: calc(60vh - 200px);
+    height: calc(50vh - 200px);
     color: #fff;
     text-align: left;
     padding: 10px 5%;
-    margin: 50px 0;
     align-items: center;
     justify-content: space-between;
+}
+footer p {
+    padding-bottom: 10px;
+    margin: 0;
 }
 .small_menu {
     display: none;
