--- a/css/stylel.css
+++ b/css/stylel.css
@@ -463,7 +463,7 @@ textarea {
 }
 footer {
     background-color: rgb(21, 21, 95);
-    height: calc(50vh - 200px);
+    height: 100px;
     color: #fff;
     text-align: left;
     padding: 10px 5%;
